// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tabs/demo/basic.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-animated"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of Tab Pane 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/card.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-no-animation"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-no-animated"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of Tab Pane 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/card-top.md correctly 1`] = `
<div
  class="card-container"
>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-no-animation"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  Tab Title 1
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab Title 2
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab Title 3
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-no-animated"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        <p>
          Content of Tab Pane 1
        </p>
        <p>
          Content of Tab Pane 1
        </p>
        <p>
          Content of Tab Pane 1
        </p>
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-add-trigger.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        ADD
      </span>
    </button>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-editable-card ant-tabs-no-animation"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  <div>
                    Tab 1
                    <i
                      class="anticon anticon-close ant-tabs-close-x"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="close"
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
                        />
                      </svg>
                    </i>
                  </div>
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  <div>
                    Tab 2
                    <i
                      class="anticon anticon-close ant-tabs-close-x"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="close"
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
                        />
                      </svg>
                    </i>
                  </div>
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-no-animated"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of Tab Pane 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/disabled.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="true"
                aria-selected="false"
                class=" ant-tabs-tab ant-tabs-tab-disabled"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-animated"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Tab 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/editable-card.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-editable-card ant-tabs-no-animation"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-extra-content"
      style="float:right"
    >
      <span>
        <i
          class="anticon anticon-plus ant-tabs-new-tab"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="plus"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M866.5 476H548V165.5c0-19.9-16.1-36-36-36s-36 16.1-36 36V476H164.5c-19.9 0-36 16.1-36 36s16.1 36 36 36H476v311.5c0 19.9 16.1 36 36 36s36-16.1 36-36V548h318.5c19.9 0 36-16.1 36-36s-16.1-36-36-36z"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                <div>
                  Tab 1
                  <i
                    class="anticon anticon-close ant-tabs-close-x"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="close"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
                      />
                    </svg>
                  </i>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                <div>
                  Tab 2
                  <i
                    class="anticon anticon-close ant-tabs-close-x"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="close"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
                      />
                    </svg>
                  </i>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                <div
                  class="ant-tabs-tab-unclosable"
                >
                  Tab 3
                </div>
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-no-animated"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of Tab 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/extra.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-extra-content"
      style="float:right"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Extra Action
        </span>
      </button>
    </div>
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-animated"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of tab 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/icon.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                <span>
                  <i
                    class="anticon anticon-apple"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="apple"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M902 349.1c-60.1-88-153.8-100.1-187.2-101.5-79.7-8.1-155.6 46.9-196 46.9-40.4 0-102.8-45.8-168.9-44.6-86.9 1.3-167 50.5-211.8 128.4C47.8 535 115 767.1 203 894.2c43 62.2 94.3 132.1 161.6 129.6 64.8-2.6 89.4-42 167.7-42 78.4 0 100.4 42 169 40.7 69.8-1.3 114-63.4 156.7-125.8 49.4-72.2 69.7-142 70.9-145.6-1.6-.7-136-52.2-137.4-207.1-1.3-129.6 105.7-191.8 110.5-194.9zM715.8 0C664.3 2.1 602 34.3 565 77.5c-33.1 38.4-58.7 99.6-50.9 158.4 57.5 4.5 112.7-29.2 148.5-72.5C698.3 120.2 722.4 60 715.8 0z"
                      />
                    </svg>
                  </i>
                  Tab 1
                </span>
              </div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                <span>
                  <i
                    class="anticon anticon-android"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="android"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M887.662 320.871c-34.397 0-62.294 28.297-62.294 63.294V631.44c0 34.896 27.897 63.293 62.294 63.293s62.294-28.297 62.294-63.293V384.165c0-34.997-27.798-63.294-62.294-63.294zm-751.324 0c-34.397 0-62.294 28.297-62.294 63.294V631.44c0 34.896 27.897 63.293 62.294 63.293s62.294-28.297 62.294-63.293V384.165c0-34.997-27.897-63.294-62.294-63.294zm99.79 1.9v451.754c0 26.798 21.798 48.595 48.595 48.595h55.494v137.586c0 34.897 27.898 63.294 62.294 63.294s62.294-28.297 62.294-63.294V823.02h96.99v137.586c0 34.897 27.897 63.294 62.294 63.294s62.293-28.297 62.293-63.294V823.02h55.495c26.797 0 48.595-21.797 48.595-48.595V322.771H236.128zM643.387 88.695l51.195-74.293c3-4.4 2.3-10.199-1.7-12.999-4-2.7-9.7-1.4-12.699 3l-53.195 77.292C591.992 67.897 552.996 60.198 512 60.198s-79.992 7.699-114.988 21.497L343.817 4.503c-3-4.4-8.7-5.8-12.699-3-4 2.7-4.7 8.5-1.7 13l51.195 74.292c-81.391 37.896-138.486 109.789-145.785 193.78h554.344c-7.3-84.091-64.394-155.984-145.785-193.88zM395.112 205.883c-16.898 0-30.697-13.699-30.697-30.697 0-16.898 13.699-30.697 30.697-30.697 16.898 0 30.697 13.699 30.697 30.697-.1 16.898-13.799 30.697-30.697 30.697zm237.676 0c-16.899 0-30.697-13.699-30.697-30.697 0-16.898 13.698-30.697 30.697-30.697 16.898 0 30.697 13.699 30.697 30.697-.1 16.898-13.799 30.697-30.697 30.697z"
                      />
                    </svg>
                  </i>
                  Tab 2
                </span>
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-animated"
    style="margin-left:-100%"
  >
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Tab 2
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/position.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    Tab position：
    <div
      class="ant-select ant-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1"
            title="top"
          >
            top
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <i
            class="anticon anticon-down ant-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="down"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-line"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  Tab 1
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 2
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 3
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-animated"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of Tab 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-bottom:16px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-small ant-tabs-line"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  Tab 1
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 2
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 3
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-animated"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of tab 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/slide.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-bottom:8px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="top"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Horizontal
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="left"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Vertical
      </span>
    </label>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-line"
    style="height:220px"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  Tab 1
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 2
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 3
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 4
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 5
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 6
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 7
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 8
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 9
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 10
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 11
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-animated"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of tab 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;
